--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
-body {
-    font-family: 'Ofelia Display', sans-serif;
-    color: #1d1d1b;
-    background-color: #f5f5f2;
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Ofelia Display', sans-serif;
+}
+
+body {
+    background-color: #f5f5f2;
+    color: #1d1d1b;
 }
 
 header {
@@ -12,6 +16,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .logo img {
@@ -37,33 +42,34 @@ nav a {
     color: #f5f5f2;
 }
 
-section {
-    padding: 40px 20px;
-}
-
-h2, h1 {
+h1,
+h2 {
     color: #3d5f23;
     text-align: center;
 }
 
-.product {
-    margin-bottom: 20px;
-    padding: 15px;
-    border-radius: 5px;
-    text-align: center;
-}
-
-footer {
-    background-color: #1d1d1b;
-    color: #f5f5f2;
-    text-align: center;
+.product-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
     padding: 20px;
 }
 
-.btn{
-    display: block;
-    width: 80%;
+.product {
+    background: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    text-align: center;
+    width: 100%;
     max-width: 300px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.btn {
+    display: block;
+    width: 100%;
+    max-width: 250px;
     margin: 10px auto;
     padding: 12px;
     background-color: #fcc137;
@@ -79,6 +85,7 @@ footer {
     background-color: #3d5f23;
     color: #f5f5f2;
 }
+
 #contato {
     text-align: center;
     padding: 40px 20px;
@@ -93,7 +100,8 @@ footer {
     align-items: center;
 }
 
-#contato input, #contato textarea {
+#contato input,
+#contato textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #3d5f23;
@@ -102,6 +110,7 @@ footer {
 }
 
 #contato button {
+    display: block;
     width: 100%;
     max-width: 200px;
     padding: 12px;
@@ -113,9 +122,29 @@ footer {
     cursor: pointer;
     transition: 0.3s ease-in-out;
     text-align: center;
+    margin: 0 auto;
 }
 
 #contato button:hover {
     background-color: #82bd4a;
     color: #1d1d1b;
+}
+
+footer {
+    background-color: #1d1d1b;
+    color: #f5f5f2;
+    text-align: center;
+    padding: 20px;
+}
+
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    nav ul {
+        flex-direction: column;
+        padding-top: 10px;
+    }
 }
