--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ nav ul {
     gap: 20px;
 }
 
+nav ul :hover {
+ color: #fcc137;
+}
+
 nav a {
     color: #f5f5f2;
     text-decoration: none;
@@ -67,7 +71,7 @@ h2 {
 .btn {
     display: block;
     width: 100%;
-    max-width: 250px;
+    max-width: 400px;
     margin: 10px auto;
     padding: 12px;
     background-color: #fcc137;
